# face-detect-emoji

./: CMakeLists.txt  README.md  affine_transform.cpp  affine_transform.h  affine_transform.py  image_types.h  index.html  inference.py  main.cpp  muller_landmarks.h  preprocessing.py  pyproject.toml  train.py  transform_landmarks.cpp
emoji/: convert_code.py
js/: emoji_data.js  expression_backend.js
model/: model_extractor.py
wasm/: build.sh  expression_recognition.js  geometry.cpp  geometry.h  main.cpp
